2009-02-13  Glenn Morris  <rgm@gnu.org>

	* org-rmail.el (rmail-show-message): Restore argument list to the
	declaration now that this functions behaves in Emacs 23 as in 22.

2009-02-12  Glenn Morris  <rgm@gnu.org>

	* org-footnote.el (org-footnote-at-definition-p): Fix doc typo.

2009-02-12  Joachim Reiter  <Reiter.Joachim@web.de>  (tiny change)

	* org-footnote.el (org-footnote-action): Fix doc typo.

2009-02-06  Carsten Dominik  <dominik@science.uva.nl>

	* org-exp.el (org-export-preprocess-string): Fix bug with skipping
	text before first headline.
	(org-export-remove-or-extract-drawers): Fix regular expression for
	extracting drawers.

	* org.el (org-format-latex): Stop LaTeX fragment processing in
	protected examples.

2009-02-05  Glenn Morris  <rgm@gnu.org>

	* org-rmail.el (rmail-show-message): Update declaration.
	(rmail-buffer, rmail-view-buffer): Declare.
	(org-rmail-store-link, org-rmail-follow-link): Handle mbox Rmail.

2009-02-04  Carsten Dominik  <dominik@science.uva.nl>

	* org.el (org-return-follows-link): Revert setting
	`org-return-follows-link' to t by default.

2009-02-02  Carsten Dominik  <dominik@science.uva.nl>

	* org.el (org-cycle-global-at-bob): Fix typo.

	* org-jsinfo.el (org-infojs-handle-options): Fix typo in comment.

2009-02-02  Carsten Dominik  <carsten.dominik@gmail.com>

	* org.el (org-mode): Make dependence stuff work more reliably.
	(org-update-parent-todo-statistics): Fix bug with updating
	statistics cookie.
	(org-yank-adjusted-subtrees, org-return-follows-link)
	(org-use-fast-todo-selection, org-tags-column): New default
	setting for variables.

	* org-export-latex.el (org-export-latex-emphasis-alist): Use = and
	~ as verbatim delimiters, to avoid table bug.
	(org-export-latex-classes): Remove the a4paper option from the
	default styles.

	* org-exp.el (org-export-html-format-image): New argument
	PAR-OPEN, to fix XHTM validation bug.
	(org-export-as-html): Pass par-open to
	`org-export-html-format-image'.